syntax = "proto3";
package proto;

option go_package = "./;storagepb";

message ObjectInfo {
    string file_id = 1;
    int32  object_num = 2;
    bytes chunk = 3;
}

message ObjectRequest {
    string file_id = 1;
    int32  object_num = 2;
}

message ObjectUploadStatus {
    string file_id = 1;
    int32  object_num = 2;
}

service ObjectStorage {
    rpc Upload(stream ObjectInfo) returns(ObjectUploadStatus);
    rpc Get(ObjectRequest) returns(stream ObjectInfo);
}